fix: some layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -5,36 +5,41 @@
 @tailwind utilities;
 
 body {
-  font-family: "Poppins", sans-serif;
+    font-family: "Poppins", sans-serif;
 }
 
 img {
-  display: block;
-  max-width: 100%;
+    display: block;
+    max-width: 100%;
 }
 
 .custom-radio-btn {
-  @apply w-4 h-4 border-2 border-black rounded-full flex justify-center items-center;
+    @apply w-4 h-4 border-2 border-black rounded-full flex justify-center items-center;
 }
 
 .custom-radio-btn .checkmark {
-  @apply inline-block bg-black rounded-full opacity-0 transition-opacity ease-linear duration-200;
-  width: 100%;
-  height: 100%;
+    @apply inline-block bg-black rounded-full opacity-0 transition-opacity ease-linear duration-200;
+    width: 100%;
+    height: 100%;
 }
 
 .custom-radio-btn input {
-  @apply hidden;
+    @apply hidden;
 }
 
 .custom-radio-btn input:checked + .checkmark {
-  @apply opacity-100;
+    @apply opacity-100;
 }
 
 .text-overflow-ellipsis {
-  @apply overflow-hidden whitespace-nowrap text-ellipsis;
+    @apply overflow-hidden whitespace-nowrap text-ellipsis;
 }
 
 .thumb {
-  @apply bg-primary w-6 aspect-square rounded-full;
+    @apply bg-primary w-6 aspect-square rounded-full;
+}
+
+.auto-flow {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 }
